spring sercurity with login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,7 @@ spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
-#config spring security
-spring.security.user.name=peterbui
-spring.security.user.password=21102004
+logging.level.org.springframework.security=DEBUG
 
 #config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
